--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^1.2.1",
+    "element-ui": "^2.15.12",
     "vue": "^2.5.2",
+    "vue-axios": "^3.5.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -33,7 +36,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chalk": "^2.0.1",
-    "chromedriver": "^2.27.2",
+    "chromedriver": "^2.46.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
